...
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:paddingBottom="16dp">

                <TextView
                    android:id="@+id/tvTitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
...
